# horgand

./: .gitignore  CMakeLists.txt  ChangeLog  README  configure.ac  configure.in
data/: Default.horeb
man/: horgand.1
src/: HORGAN.cxx  HORGAN.h  Holrgan.h  Makefile.am  jackoutput.C  jackoutput.h  main.C  organ.C  organAccompaniment.C  organAudioOut.C  organDSPEffects.C  organFileIO.C  organMIDIIn.C  organvarios.C
